<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/root_tabs"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
			<LinearLayout
				android:id="@+id/linear_no_tab"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:paddingLeft="8dp"
				android:paddingTop="8dp"
				android:paddingRight="8dp"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="vertical">
				<TextView
					android:id="@+id/sad_face_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingTop="8dp"
					android:paddingRight="8dp"
					android:fontFamily="@font/inter_variable"
					android:text="@string/sad_face_text"
					android:textSize="60sp" />
				<ImageView
					android:id="@+id/incognito_image"
					android:layout_width="80dp"
					android:layout_height="80dp"
					android:layout_marginLeft="8dp"
					android:layout_marginTop="8dp"
					android:layout_marginRight="8dp"
                    android:contentDescription="@string/incognito_image_content_desc"
                    android:scaleType="fitCenter"
					android:src="@drawable/ic_incognito_circle_24" />
				<TextView
					android:id="@+id/no_tab_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:paddingBottom="8dp"
					android:fontFamily="@font/inter_variable"
					android:gravity="center_horizontal"
					android:text="@string/empty_tab_list_text"
					android:textSize="14sp" />
			</LinearLayout>
			<ListView
				android:id="@+id/tabs_list"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:choiceMode="none"
				android:stackFromBottom="true" />
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="8dp"
				android:paddingRight="8dp"
				android:paddingBottom="8dp"
				android:gravity="center_vertical"
				android:orientation="horizontal">
				<ImageView
					android:id="@+id/settings_button"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_margin="6dp"
					android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/settings_button_content_desc"
                    android:padding="4dp"
					android:scaleType="centerInside"
					android:src="@drawable/ic_settings_24" />
				<Space
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1" />
				<ImageView
					android:id="@+id/incognito_button"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_margin="6dp"
					android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/incognito_button_content_desc"
                    android:padding="4dp"
					android:scaleType="centerInside"
					android:src="@drawable/ic_incognito_24" />
				<LinearLayout
					android:id="@+id/tabs_counter"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_margin="6dp"
					android:gravity="center_horizontal|center_vertical"
					android:orientation="vertical"
					android:background="?attr/selectableItemBackgroundBorderless">
					<TextView
						android:id="@+id/tabs_counter_text"
						android:layout_width="30dp"
						android:layout_height="30dp"
						android:background="@drawable/ic_check_box_outline_blank_24"
						android:fontFamily="@font/inter_variable"
						android:gravity="center"
						android:text="@string/tab_counter_empty_text"
						android:textSize="12sp"
						android:textStyle="bold" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/root_web_view"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
			<androidx.coordinatorlayout.widget.CoordinatorLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1">
				<LinearLayout
					android:id="@+id/web_view_placeholder"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical" />
				<ListView
					android:id="@+id/query_list"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="bottom"
					android:background="?android:colorBackground"
					android:choiceMode="none"
					android:stackFromBottom="true" />
			</androidx.coordinatorlayout.widget.CoordinatorLayout>
			<LinearLayout
				android:id="@+id/linear_find_bar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:gravity="center_vertical"
				android:orientation="horizontal">
				<EditText
					android:id="@+id/find_bar_input"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
                    android:autofillHints="none"
					android:fontFamily="@font/inter_variable"
                    android:inputType="none"
                    android:padding="8dp"
					android:textSize="16sp"
					android:hint="@string/find_text" />
				<ImageView
					android:id="@+id/find_bar_find_prev_button"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_margin="6dp"
					android:alpha="0.5"
					android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/find_bar_find_prev_button_content_desc"
                    android:padding="4dp"
					android:enabled="false"
					android:scaleType="centerInside"
					android:src="@drawable/ic_expand_less_24" />
				<ImageView
					android:id="@+id/find_bar_find_next_button"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_margin="6dp"
					android:alpha="0.5"
                    android:background="?attr/selectableItemBackgroundBorderless"
					android:enabled="false"
					android:contentDescription="@string/find_bar_find_next_button_content_desc"
					android:padding="4dp"
					android:scaleType="centerInside"
					android:src="@drawable/ic_expand_more_24" />
				<ImageView
					android:id="@+id/find_bar_close_button"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_margin="6dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
					android:contentDescription="@string/find_bar_close_button_content_desc"
					android:padding="4dp"
					android:scaleType="centerInside"
					android:src="@drawable/ic_close_24" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear_chrome_bar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<com.google.android.material.progressindicator.LinearProgressIndicator
					android:id="@+id/web_view_progress_indicator"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" />
				<LinearLayout
					android:id="@+id/linear_url_bar"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:paddingBottom="8dp"
					android:gravity="center_vertical"
					android:orientation="horizontal">
					<EditText
						android:id="@+id/url_bar_input"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
                        android:autofillHints="none"
						android:fontFamily="@font/inter_variable"
						android:hint="@string/url_bar_hint"
						android:imeOptions="actionSearch"
                        android:inputType="textUri"
                        android:padding="8dp"
						android:singleLine="true"
						android:textSize="16sp" />
					<ImageView
						android:id="@+id/refresh_button"
						android:layout_width="30dp"
						android:layout_height="30dp"
						android:layout_margin="6dp"
						android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/refresh_button_content_desc"
                        android:padding="4dp"
						android:scaleType="centerInside"
						android:src="@drawable/ic_refresh_24" />
					<ImageView
						android:id="@+id/forward_button"
						android:layout_width="30dp"
						android:layout_height="30dp"
						android:layout_margin="6dp"
						android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/forward_button_content_desc"
                        android:padding="4dp"
						android:scaleType="centerInside"
						android:src="@drawable/ic_arrow_forward_24" />
					<LinearLayout
						android:id="@+id/web_view_tabs_counter"
						android:layout_width="30dp"
						android:layout_height="30dp"
						android:layout_margin="6dp"
						android:gravity="center_horizontal|center_vertical"
						android:orientation="vertical"
						android:background="?attr/selectableItemBackgroundBorderless">
						<TextView
							android:id="@+id/web_view_tabs_counter_text"
							android:layout_width="30dp"
							android:layout_height="30dp"
							android:background="@drawable/ic_check_box_outline_blank_24"
							android:fontFamily="@font/inter_variable"
							android:gravity="center_horizontal|center_vertical"
							android:text="@string/tab_counter_empty_text"
							android:textSize="12sp"
							android:textStyle="bold" />
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:layout_gravity="center_horizontal|bottom"
		android:contentDescription="@string/fab_content_desc"
		android:src="@drawable/ic_add_24" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
